--- a/apps/web-ui/package.json
+++ b/apps/web-ui/package.json
@@ -2,13 +2,18 @@
   "name": "@gate/web-ui",
   "version": "0.0.1",
   "private": true,
+  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
+    "export": "next export",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,css,md}\"",
+    "electron:serve": "wait-on http://localhost:3001 && electron electron/main.js",
+    "electron:dev": "cross-env NODE_ENV=development concurrently \"pnpm dev\" \"pnpm electron:serve\"",
+    "electron:build": "cross-env NODE_ENV=production pnpm build && pnpm export && electron-builder"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -25,12 +30,34 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^30.0.9",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "app.gate.desktop",
+    "productName": "Gate Desktop",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "electron/**/*",
+      "out/**/*",
+      "package.json",
+      "next.config.js",
+      "node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    }
   }
 }
